# hivemind-core

./: .coverage  .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  SECURITY.md  SKILL.md  TODOS.md  alembic.ini  pyproject.toml
autoresearch/: findings.md  parallel_ablations.sh
bench/: cli.py  gan.py  runner.py  scenarios.py
deploy/: Dockerfile
docs/: async-query-pipeline.md  conditional-recall.md  room-cookbook.md  security-audit-2026-04.md
eval/: README.md
hivemind/: __init__.py  agent_base_bootstrap.py  agent_seal.py  attestation.py  cli.py  config.py  core.py  db.py  migrations.py  models.py  onchain.py  pipeline.py  reproduce.py  room_vault.py  rooms.py  scope.py  server.py  store.py  tenant_billing.py  tenant_credit_codes.py  tenant_keys.py  tenants.py  tools.py  version.py
scripts/: migrate-legacy-hivemind.sh  migrate_pg.py  quickstart.sh  smoke_capability_tokens.py  smoke_multi_tenant.py
tests/: INTEGRATION_TESTS.md  conftest.py  test_agent_attest.py  test_agent_seal_mode.py  test_agent_store_seal.py  test_api.py  test_artifact_upload.py  test_ask_verifies_attestation.py  test_attestation.py  test_attestation_startup.py  test_capability_tokens.py  test_cli_compose.py  test_cli_share.py  test_cli_trust.py  test_core_store.py  test_deferred_s3_upload.py  test_deploy_defaults.py  test_docker_runner.py  test_hermes_agent_general_contract.py  test_inspection_inheritance_and_audit.py  test_integration_docker.py  test_migrations.py  test_pg_roles.py  test_pipeline.py  (+17 more)
(+119 files in other folders)
