[project]
name = "hivemind-core"
version = "0.2.0"
description = "Knowledge enclave with recall constraints"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "openai>=1.0",
    "sqlalchemy>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=46.0.5",
    "python-multipart>=0.0.22",
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["hivemind"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
